Opened 9 years ago

Closed 6 years ago

#12860 closed bug (fixed)

usb_disk: command status wrapper is not valid: ...

Reported by: waddlesplash Owned by: nobody
Priority: normal Milestone: R1/beta2
Component: Drivers/USB/XHCI Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

I'm seeing lots of these lines repeating and spamming the syslog (one every seconds):

KERN: usb_disk: command status wrapper is not valid: 0x0
KERN: usb_disk: command status wrapper is not valid: 0x43425355
KERN: usb_disk: command status wrapper is not valid: 0x0
KERN: usb_disk: command status wrapper is not valid: 0x43425355

VirtualBox 5.1, USB controller set to XHCI, one emulated USB disk attached via VirtualBox Storage settings panel (but not mounted in Haiku), hrev50414.

Does not happen with USB controller set to EHCI (and presumably OHCI, but I didn't test that).

Change History (3)

comment:1 by korli, 9 years ago

Owner: changed from korli to nobody
Status: newassigned

comment:2 by pulkomandy, 6 years ago

Milestone: UnscheduledR1/beta2

comment:3 by waddlesplash, 6 years ago

Resolution: fixed
Status: assignedclosed

Can't reproduce anymore; seems fixed.

Note: See TracTickets for help on using tickets.