src/add-ons/kernel/busses/usb/xhci.cpp
@@ -787,18 +787,6 @@ XHCI::AddTo(Stack *stack)
 				continue;
 			}
 
-			// whitelists a few devices for the time being
-			switch ((item->vendor_id << 16) | item->device_id) {
-				case 0x10330194:	// Nec Corporation uPD720200
-				case 0x1b731009:	// Fresco Logic FL1009
-				case 0x80861e31:	// Intel xHCI Panther Point (VirtualBox5)
-				case 0x80869c31:	// Intel xHCI Panther Point
-					break;
-				default:
-					TRACE_MODULE_ERROR("found device but unsupported\n");
-					continue;
-			}
-
 			TRACE_MODULE("found device at IRQ %u\n",
 				item->u.h0.interrupt_line);
 			XHCI *bus = new(std::nothrow) XHCI(item, stack);
